fix: ajusta overflow no mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 html {
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 
 .shadow-text {
